testsuite/tests/quotation/eval/non_value_quote.compilers.reference
File "non_value_quote.ml", line 13, characters 41-56:
13 |   let eval : <[int64#]> expr -> int64# = [%eval: int64#] in
                                              ^^^^^^^^^^^^^^^
Error: Only quotations with value-kinded types may be evaluated.
       The layout of int64# is bits64
         because it is the unboxed version of the primitive type int64.
       But the layout of int64# must be a sublayout of value
         because it's the result type of a quotation.
